<resources>
    <string name="app_name">MuzeiGram</string>
    <string name="app_description">Photos from Instagram</string>

    <string name="unauthorized_access_description">Authorize Instagram access in the settings below</string>
    <string name="apology_text">Instagram has limited what 3rd party apps can do. For now, you can only use your personal photos as an art source.</string>

    <string name="default_image_title">Bro the cat</string>
    <string name="default_image_byline">Use the \"Authorize Instagram Access\" button in the plugin settings to enable Instagram access.</string>

    <string name="activity_instagram_settings_authorize">Authorize Instagram Access</string>
    <string name="activity_instagram_settings_authorize_set">Access Authorized</string>

    <string name="activity_instagram_settings_feed_type">Source</string>
    <string name="activity_instagram_settings_update_interval">Update Interval</string>
    <string name="activity_instagram_settings_no_users">Select users here</string>

    <string name="feed_type_popular">Popular</string>
    <string name="feed_type_feed">Feed</string>
    <string name="feed_type_liked">Liked</string>
    <string name="feed_type_personal">Personal</string>
    <string name="feed_type_custom">Custom</string>

    <string name="action_rotate_interval">Change interval</string>
    <string name="action_remove_access">Remove Instagram Access</string>

    <string name="update_interval_ten_seconds">Every 10 seconds</string>
    <string name="update_interval_minute">Every minute</string>
    <string name="update_interval_five_minute">Every 5 minutes</string>
    <string name="update_interval_fifteen_minute">Every 15 minutes</string>
    <string name="update_interval_thirty_minute">Every 30 minutes</string>
    <string name="update_interval_hour">Every hour</string>
    <string name="update_interval_three_hours">Every 3 hours</string>
    <string name="update_interval_six_hours">Every 6 hours</string>
    <string name="update_interval_twelve_hours">Every 12 hours</string>
    <string name="update_interval_day">Every day</string>

    <string name="user_chooser_search_hint">Search Instagram Users</string>
    <string name="user_chooser_user_added">%1$s added</string>
</resources>
